--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # menu
 menu:
-  首页: .
+  Home: .
   Archives: archives  # 归档
   Categories: categories  # 分类
   Tags: tags  # 标签
@@ -33,7 +33,7 @@ site:
     url: ../images/logo.png
   title: Hexo # 页面title
   favicon: /favicon.png
-  board: <p>欢迎交流与分享经验!</p> # 站点公告
+  board: <p>风起于青萍之末，浪成于微澜之间</p> # 站点公告
   copyright: false # 底部版权信息
 
 # config
@@ -113,7 +113,7 @@ share:
 # 项目仓库信息（将会覆盖 github 项）
 repository:
   platform: github # 托管平台（github | gitee）
-  username: cofess # 用户名
+  username: jiang-shijie826 # 用户名
 
 # Comment
 # Gitment
@@ -202,15 +202,15 @@ profile:
   articleSelfBlock: false # 关闭文章下方的自我介绍
   avatar: images/avatar.jpg
   gravatar: # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
-  author: 昵称
-  author_title: Web Developer & Designer
-  author_description: 个人简介。
-  location: Shenzhen, China
-  follow: https://github.com/cofess
+  author: 冰凉西瓜
+  author_title: 搬砖农民工
+  author_description: 一些心愿，是要埋在心里默默努力，有时候说出来了就难得实现
+  location: Nanjing, China
+  follow: https://github.com/jiang-shijie826
   # Social Links
   social:
     links:
-      github: https://github.com/cofess
+      github: https://github.com/jiang-shijie826
       weibo: http://weibo.com/cofess
       twitter: https://twitter.com/iwebued
       # facebook: /
@@ -225,11 +225,11 @@ profile:
     Javascript: ★★★☆☆
     HTML+CSS: ★★★☆☆
     Bootstrap: ★★★☆☆
-    ThinkPHP: ★★★☆☆
+    Java: ★★★☆☆
     平面设计: ★★★☆☆
   # My Personal Links
   links:
-    Github: https://github.com/cofess
+    Github: https://github.com/jiang-shijie826
     Blog: http://blog.cofess.com
     微博: http://weibo.com/cofess
     花瓣: http://huaban.com/cofess
@@ -250,3 +250,5 @@ profile:
   projects:
     cofess/gulp-startpro: https://github.com/cofess/gulp-startpro
     cofess/hexo-theme-pure: https://github.com/cofess/hexo-theme-pure
+    
+    
