--- a/_config.yml
+++ b/_config.yml
@@ -134,10 +134,9 @@ comment:
   gitalk: # gitalk. https://gitalk.github.io/
     owner: jiang-shijie826 #必须. GitHub repository 所有者，可以是个人或者组织。
     admin: jiang-shijie826 #必须. GitHub repository 的所有者和合作者 (对这个 repository 有写权限的用户)。
-    repo: jiang-shijie826.github.io #必须. GitHub repository.
+    repo: myblogtalk #必须. GitHub repository.
     ClientID: bc0a632fa810d755f9e4 #必须. GitHub Application Client ID.
     ClientSecret: 13e02c602d030ac9056c1a15ff04f6bed3139d89 #必须. GitHub Application Client Secret.
-    # proxy: https://cors-anywhere.azm.workers.dev/https://github.com/login/oauth/access_token
     language: zh-CN
     
   valine: # Valine. https://valine.js.org
